--- a/package.json
+++ b/package.json
@@ -18,17 +18,21 @@
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.4",
     "@reduxjs/toolkit": "^2.5.0",
     "@tremor/react": "^3.18.7",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.3.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.473.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
