--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.4",
@@ -30,6 +31,7 @@
     "file-saver": "^2.0.5",
     "framer-motion": "^12.3.1",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.473.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
@@ -37,6 +39,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
@@ -47,6 +50,7 @@
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/file-saver": "^2.0.7",
+    "@types/leaflet": "^1.9.16",
     "@types/node": "^22.10.7",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
